// @flow
import * as React from 'react';
import { storiesOf } from '@storybook/react';
import theme from '../utils/theme';
import P from '.';

storiesOf('P', module)
  .add(
    'API',
    () => (
      <P>
        Nisi eu eiusmod cupidatat aute laboris commodo excepteur esse dolore
        incididunt incididunt aliquip pariatur est minim officia sit. Nulla
        pariatur duis duis quis commodo cupidatat voluptate enim culpa elit
        adipisicing do cupidatat sint anim. Cillum elit magna occaecat proident
        sit cupidatat ad quis sunt id culpa culpa. Ad duis nulla in incididunt
        amet consequat officia ad voluptate voluptate. Pariatur eiusmod ullamco
        cupidatat non magna officia aute magna deserunt qui aute dolor eu. Qui
        amet non ex cillum sunt ad velit consequat ipsum velit.
      </P>
    ),
    {
      info: {
        text: `段落使用。 (${theme.fontSize.p}) & color: currentColor`,
        inline: true,
      },
    },
  )
  .add(
    'With color props',
    () => (
      <div>
        {Object.keys(theme.color).map(key => (
          <P key={key} color={key}>
            Paragraph {key}
          </P>
        ))}
      </div>
    ),
    {
      info: {
        text: '使用不同等級的 Color',
        inline: true,
      },
    },
  )
  .add(
    'Nested children with div',
    () => (
      <P as="div">
        <div>
          <span>
            Qui amet non ex cillum sunt ad velit consequat ipsum velit.
          </span>
        </div>
      </P>
    ),
    {
      info: {
        text: 'p 裡面不能有 div',
        inline: true,
      },
    },
  );
