// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots P API 1`] = `
.c0 {
  margin: 0;
  font-size: 1rem;
}

<P>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-bxivhb",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  margin: 0;
  font-size: ",
            [Function],
            ";

  ",
            [Function],
            ";
",
          ],
        },
        "displayName": "P",
        "propTypes": Object {
          "color": [Function],
        },
        "render": [Function],
        "styledComponentId": "sc-bxivhb",
        "target": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      }
    }
    forwardedRef={null}
  >
    <BaseComponent
      className="c0"
    >
      <p
        className="c0"
      >
        Nisi eu eiusmod cupidatat aute laboris commodo excepteur esse dolore incididunt incididunt aliquip pariatur est minim officia sit. Nulla pariatur duis duis quis commodo cupidatat voluptate enim culpa elit adipisicing do cupidatat sint anim. Cillum elit magna occaecat proident sit cupidatat ad quis sunt id culpa culpa. Ad duis nulla in incididunt amet consequat officia ad voluptate voluptate. Pariatur eiusmod ullamco cupidatat non magna officia aute magna deserunt qui aute dolor eu. Qui amet non ex cillum sunt ad velit consequat ipsum velit.
      </p>
    </BaseComponent>
  </StyledComponent>
</P>
`;

exports[`Storyshots P Nested children with div 1`] = `
.c0 {
  margin: 0;
  font-size: 1rem;
}

<P>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-bxivhb",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  margin: 0;
  font-size: ",
            [Function],
            ";

  ",
            [Function],
            ";
",
          ],
        },
        "displayName": "P",
        "propTypes": Object {
          "color": [Function],
        },
        "render": [Function],
        "styledComponentId": "sc-bxivhb",
        "target": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      }
    }
    forwardedRef={null}
  >
    <BaseComponent
      className="c0"
    >
      <div
        className="c0"
      >
        <div>
          <span>
            Qui amet non ex cillum sunt ad velit consequat ipsum velit.
          </span>
        </div>
      </div>
    </BaseComponent>
  </StyledComponent>
</P>
`;

exports[`Storyshots P With color props 1`] = `
.c5 {
  margin: 0;
  font-size: 1rem;
  color: #00A1DE;
}

.c0 {
  margin: 0;
  font-size: 1rem;
  color: #353630;
}

.c1 {
  margin: 0;
  font-size: 1rem;
  color: #999A94;
}

.c2 {
  margin: 0;
  font-size: 1rem;
  color: #D1D2D3;
}

.c3 {
  margin: 0;
  font-size: 1rem;
  color: #FAFAFA;
}

.c4 {
  margin: 0;
  font-size: 1rem;
  color: #FFFFFF;
}

.c6 {
  margin: 0;
  font-size: 1rem;
  color: #69BE28;
}

.c7 {
  margin: 0;
  font-size: 1rem;
  color: #F5364E;
}

.c8 {
  margin: 0;
  font-size: 1rem;
  color: #F39A1E;
}

<div>
  <P
    color="black"
    key="black"
  >
    <StyledComponent
      color="black"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c8",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
    >
      <BaseComponent
        className="c0"
        color="black"
      >
        <div
          className="c0"
          color="black"
        >
          Paragraph 
          black
        </div>
      </BaseComponent>
    </StyledComponent>
  </P>
  <P
    color="grayDark"
    key="grayDark"
  >
    <StyledComponent
      color="grayDark"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c8",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
    >
      <BaseComponent
        className="c1"
        color="grayDark"
      >
        <div
          className="c1"
          color="grayDark"
        >
          Paragraph 
          grayDark
        </div>
      </BaseComponent>
    </StyledComponent>
  </P>
  <P
    color="grayBase"
    key="grayBase"
  >
    <StyledComponent
      color="grayBase"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c8",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
    >
      <BaseComponent
        className="c2"
        color="grayBase"
      >
        <div
          className="c2"
          color="grayBase"
        >
          Paragraph 
          grayBase
        </div>
      </BaseComponent>
    </StyledComponent>
  </P>
  <P
    color="grayLight"
    key="grayLight"
  >
    <StyledComponent
      color="grayLight"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c8",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
    >
      <BaseComponent
        className="c3"
        color="grayLight"
      >
        <div
          className="c3"
          color="grayLight"
        >
          Paragraph 
          grayLight
        </div>
      </BaseComponent>
    </StyledComponent>
  </P>
  <P
    color="white"
    key="white"
  >
    <StyledComponent
      color="white"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c8",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
    >
      <BaseComponent
        className="c4"
        color="white"
      >
        <div
          className="c4"
          color="white"
        >
          Paragraph 
          white
        </div>
      </BaseComponent>
    </StyledComponent>
  </P>
  <P
    color="default"
    key="default"
  >
    <StyledComponent
      color="default"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c8",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
    >
      <BaseComponent
        className="c3"
        color="default"
      >
        <div
          className="c3"
          color="default"
        >
          Paragraph 
          default
        </div>
      </BaseComponent>
    </StyledComponent>
  </P>
  <P
    color="primary"
    key="primary"
  >
    <StyledComponent
      color="primary"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c8",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
    >
      <BaseComponent
        className="c5"
        color="primary"
      >
        <div
          className="c5"
          color="primary"
        >
          Paragraph 
          primary
        </div>
      </BaseComponent>
    </StyledComponent>
  </P>
  <P
    color="success"
    key="success"
  >
    <StyledComponent
      color="success"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c8",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
    >
      <BaseComponent
        className="c6"
        color="success"
      >
        <div
          className="c6"
          color="success"
        >
          Paragraph 
          success
        </div>
      </BaseComponent>
    </StyledComponent>
  </P>
  <P
    color="error"
    key="error"
  >
    <StyledComponent
      color="error"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c8",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
    >
      <BaseComponent
        className="c7"
        color="error"
      >
        <div
          className="c7"
          color="error"
        >
          Paragraph 
          error
        </div>
      </BaseComponent>
    </StyledComponent>
  </P>
  <P
    color="warning"
    key="warning"
  >
    <StyledComponent
      color="warning"
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c8",
            "rules": Array [
              "
  margin: 0;
  font-size: ",
              [Function],
              ";

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "P",
          "propTypes": Object {
            "color": [Function],
          },
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
    >
      <BaseComponent
        className="c8"
        color="warning"
      >
        <div
          className="c8"
          color="warning"
        >
          Paragraph 
          warning
        </div>
      </BaseComponent>
    </StyledComponent>
  </P>
</div>
`;
